@@ -1,6 +1,7 @@
 1.15.2 /
 [Alexandr Topilski]
 - Redirect requests to cluster nodes
+- Up hiredis sources to version 0.13.3
 
 1.14.1 / January 17, 2018
 [Alexandr Topilski]
