@@ -10,26 +10,29 @@
 #include <sys/cdefs.h>
 #endif
 
-#ifdef FASTO
-  #if defined(__sun__)
-  #define _POSIX_C_SOURCE 200112L
-  #elif defined(__linux__) || defined(__OpenBSD__) || defined(__NetBSD__)
-  #define _XOPEN_SOURCE 600
-  #else
-  #define _XOPEN_SOURCE
-  #endif
+#if defined(__linux__) || defined(__OpenBSD__) || defined(__NetBSD__)
+#define _XOPEN_SOURCE 600
+#elif defined(__APPLE__) && defined(__MACH__)
+#define _XOPEN_SOURCE
+#elif defined(__FreeBSD__)
+// intentionally left blank, don't define _XOPEN_SOURCE
+#elif defined(AIX)
+// intentionally left blank, don't define _XOPEN_SOURCE
 #else
+#define _XOPEN_SOURCE
+#endif
+
 #if defined(__sun__)
 #define _POSIX_C_SOURCE 200112L
-#else
-#if !(defined(__APPLE__) && defined(__MACH__))
-#define _XOPEN_SOURCE 600
-#endif
-#endif
 #endif
 
 #if defined(__APPLE__) && defined(__MACH__)
 #define _OSX
+#endif
+
+#ifndef AIX
+# define _XOPEN_SOURCE_EXTENDED 1
+# define _ALL_SOURCE
 #endif
 
 #endif
