@@ -33,15 +33,19 @@
 
 #ifndef __HIREDIS_H
 #define __HIREDIS_H
-#include <stdarg.h>   /* for va_list */
-#include <stdint.h>   /* uintXX_t, etc */
-#include <sys/time.h> /* for struct timeval */
 #include "read.h"
+#include <stdarg.h> /* for va_list */
+#include <sys/time.h> /* for struct timeval */
+#include <stdint.h> /* uintXX_t, etc */
 #include "sds.h" /* for sds */
 
 #ifdef FASTO
 #include <libssh2.h>
 #include <openssl/ssl.h>
+#define SSH_UNKNOWN 0
+#define SSH_PASSWORD 1
+#define SSH_INTERACTIVE 2
+#define SSH_PUBLICKEY 4
 #endif
 
 #define HIREDIS_MAJOR 0
@@ -83,37 +87,30 @@
 
 /* number of times we retry to connect in the case of EADDRNOTAVAIL and
  * SO_REUSEADDR is being used. */
-#define REDIS_CONNECT_RETRIES 10
+#define REDIS_CONNECT_RETRIES  10
 
 /* strerror_r has two completely different prototypes and behaviors
  * depending on system issues, so we need to operate on the error buffer
  * differently depending on which strerror_r we're using. */
 #ifndef _GNU_SOURCE
 /* "regular" POSIX strerror_r that does the right thing. */
-#define __redis_strerror_r(errno, buf, len) \
-  do {                                      \
-    strerror_r((errno), (buf), (len));      \
-  } while (0)
+#define __redis_strerror_r(errno, buf, len)                                    \
+    do {                                                                       \
+        strerror_r((errno), (buf), (len));                                     \
+    } while (0)
 #else
 /* "bad" GNU strerror_r we need to clean up after. */
-#define __redis_strerror_r(errno, buf, len)                          \
-  do {                                                               \
-    char* err_str = strerror_r((errno), (buf), (len));               \
-    /* If return value _isn't_ the start of the buffer we passed in, \
-     * then GNU strerror_r returned an internal static buffer and we \
-     * need to copy the result into our private buffer. */           \
-    if (err_str != (buf)) {                                          \
-      strncpy((buf), err_str, ((len)-1));                            \
-      (buf)[(len)-1] = '\0';                                         \
-    }                                                                \
-  } while (0)
-#endif
-
-#ifdef FASTO
-#define SSH_UNKNOWN 0
-#define SSH_PASSWORD 1
-#define SSH_INTERACTIVE 2
-#define SSH_PUBLICKEY 4
+#define __redis_strerror_r(errno, buf, len)                                    \
+    do {                                                                       \
+        char *err_str = strerror_r((errno), (buf), (len));                     \
+        /* If return value _isn't_ the start of the buffer we passed in,       \
+         * then GNU strerror_r returned an internal static buffer and we       \
+         * need to copy the result into our private buffer. */                 \
+        if (err_str != (buf)) {                                                \
+            strncpy((buf), err_str, ((len) - 1));                              \
+            (buf)[(len)-1] = '\0';                                               \
+        }                                                                      \
+    } while (0)
 #endif
 
 #ifdef __cplusplus
@@ -122,50 +119,53 @@ extern "C" {
 
 /* This is the reply object returned by redisCommand() */
 typedef struct redisReply {
-  int type;                    /* REDIS_REPLY_* */
-  long long integer;           /* The integer when type is REDIS_REPLY_INTEGER */
-  size_t len;                  /* Length of string */
-  char* str;                   /* Used for both REDIS_REPLY_ERROR and REDIS_REPLY_STRING */
-  size_t elements;             /* number of elements, for REDIS_REPLY_ARRAY */
-  struct redisReply** element; /* elements vector for REDIS_REPLY_ARRAY */
+    int type; /* REDIS_REPLY_* */
+    long long integer; /* The integer when type is REDIS_REPLY_INTEGER */
+    size_t len; /* Length of string */
+    char *str; /* Used for both REDIS_REPLY_ERROR and REDIS_REPLY_STRING */
+    size_t elements; /* number of elements, for REDIS_REPLY_ARRAY */
+    struct redisReply **element; /* elements vector for REDIS_REPLY_ARRAY */
 } redisReply;
 
-redisReader* redisReaderCreate(void);
+redisReader *redisReaderCreate(void);
 
 /* Function to free the reply objects hiredis returns by default. */
-void freeReplyObject(void* reply);
+void freeReplyObject(void *reply);
 
 /* Functions to format a command according to the protocol. */
-int redisvFormatCommand(char** target, const char* format, va_list ap);
-int redisFormatCommand(char** target, const char* format, ...);
-int redisFormatCommandArgv(char** target, int argc, const char** argv, const size_t* argvlen);
-int redisFormatSdsCommandArgv(sds* target, int argc, const char** argv, const size_t* argvlen);
-void redisFreeCommand(char* cmd);
+int redisvFormatCommand(char **target, const char *format, va_list ap);
+int redisFormatCommand(char **target, const char *format, ...);
+int redisFormatCommandArgv(char **target, int argc, const char **argv, const size_t *argvlen);
+int redisFormatSdsCommandArgv(sds *target, int argc, const char ** argv, const size_t *argvlen);
+void redisFreeCommand(char *cmd);
 void redisFreeSdsCommand(sds cmd);
 
-enum redisConnectionType { REDIS_CONN_TCP, REDIS_CONN_UNIX };
+enum redisConnectionType {
+    REDIS_CONN_TCP,
+    REDIS_CONN_UNIX
+};
 
 /* Context for a connection to Redis */
 typedef struct redisContext {
-  int err;          /* Error flags, 0 when there is no error */
-  char errstr[128]; /* String representation of error when applicable */
-  int fd;
-  int flags;
-  char* obuf;          /* Write buffer */
-  redisReader* reader; /* Protocol reader */
+    int err; /* Error flags, 0 when there is no error */
+    char errstr[128]; /* String representation of error when applicable */
+    int fd;
+    int flags;
+    char *obuf; /* Write buffer */
+    redisReader *reader; /* Protocol reader */
 
-  enum redisConnectionType connection_type;
-  struct timeval* timeout;
+    enum redisConnectionType connection_type;
+    struct timeval *timeout;
 
-  struct {
-    char* host;
-    char* source_addr;
-    int port;
-  } tcp;
+    struct {
+        char *host;
+        char *source_addr;
+        int port;
+    } tcp;
 
-  struct {
-    char* path;
-  } unix_sock;
+    struct {
+        char *path;
+    } unix_sock;
 #ifdef FASTO
   LIBSSH2_SESSION* session;
   LIBSSH2_CHANNEL* channel;
@@ -188,16 +188,18 @@ redisContext* redisConnect(const char* ip,
                            int is_ssl,
                            int method);
 #else
-redisContext* redisConnect(const char* ip, int port);
+redisContext *redisConnect(const char *ip, int port);
 #endif
-redisContext* redisConnectWithTimeout(const char* ip, int port, const struct timeval tv);
-redisContext* redisConnectNonBlock(const char* ip, int port);
-redisContext* redisConnectBindNonBlock(const char* ip, int port, const char* source_addr);
-redisContext* redisConnectBindNonBlockWithReuse(const char* ip, int port, const char* source_addr);
-redisContext* redisConnectUnix(const char* path);
-redisContext* redisConnectUnixWithTimeout(const char* path, const struct timeval tv);
-redisContext* redisConnectUnixNonBlock(const char* path);
-redisContext* redisConnectFd(int fd);
+redisContext *redisConnectWithTimeout(const char *ip, int port, const struct timeval tv);
+redisContext *redisConnectNonBlock(const char *ip, int port);
+redisContext *redisConnectBindNonBlock(const char *ip, int port,
+                                       const char *source_addr);
+redisContext *redisConnectBindNonBlockWithReuse(const char *ip, int port,
+                                                const char *source_addr);
+redisContext *redisConnectUnix(const char *path);
+redisContext *redisConnectUnixWithTimeout(const char *path, const struct timeval tv);
+redisContext *redisConnectUnixNonBlock(const char *path);
+redisContext *redisConnectFd(int fd);
 
 /**
  * Reconnect the given context using the saved information.
@@ -208,14 +210,14 @@ redisContext* redisConnectFd(int fd);
  *
  * Returns REDIS_OK on successful connect or REDIS_ERR otherwise.
  */
-int redisReconnect(redisContext* c);
+int redisReconnect(redisContext *c);
 
-int redisSetTimeout(redisContext* c, const struct timeval tv);
-int redisEnableKeepAlive(redisContext* c);
-void redisFree(redisContext* c);
-int redisFreeKeepFd(redisContext* c);
-int redisBufferRead(redisContext* c);
-int redisBufferWrite(redisContext* c, int* done);
+int redisSetTimeout(redisContext *c, const struct timeval tv);
+int redisEnableKeepAlive(redisContext *c);
+void redisFree(redisContext *c);
+int redisFreeKeepFd(redisContext *c);
+int redisBufferRead(redisContext *c);
+int redisBufferWrite(redisContext *c, int *done);
 #ifdef FASTO
 int redisReadToBuffer(redisContext* c, char* buf, int size, ssize_t* readed);
 int redisWriteFromBuffer(redisContext* c, const char* buf, ssize_t* nwritten);
@@ -224,27 +226,27 @@ int redisWriteFromBuffer(redisContext* c, const char* buf, ssize_t* nwritten);
  * replies to return and returns one if so. Otherwise, it flushes the output
  * buffer to the socket and reads until it has a reply. In a non-blocking
  * context, it will return unconsumed replies until there are no more. */
-int redisGetReply(redisContext* c, void** reply);
-int redisGetReplyFromReader(redisContext* c, void** reply);
+int redisGetReply(redisContext *c, void **reply);
+int redisGetReplyFromReader(redisContext *c, void **reply);
 
 /* Write a formatted command to the output buffer. Use these functions in blocking mode
  * to get a pipeline of commands. */
-int redisAppendFormattedCommand(redisContext* c, const char* cmd, size_t len);
+int redisAppendFormattedCommand(redisContext *c, const char *cmd, size_t len);
 
 /* Write a command to the output buffer. Use these functions in blocking mode
  * to get a pipeline of commands. */
-int redisvAppendCommand(redisContext* c, const char* format, va_list ap);
-int redisAppendCommand(redisContext* c, const char* format, ...);
-int redisAppendCommandArgv(redisContext* c, int argc, const char** argv, const size_t* argvlen);
+int redisvAppendCommand(redisContext *c, const char *format, va_list ap);
+int redisAppendCommand(redisContext *c, const char *format, ...);
+int redisAppendCommandArgv(redisContext *c, int argc, const char **argv, const size_t *argvlen);
 
 /* Issue a command to Redis. In a blocking context, it is identical to calling
  * redisAppendCommand, followed by redisGetReply. The function will return
  * NULL if there was an error in performing the request, otherwise it will
  * return the reply. In a non-blocking context, it is identical to calling
  * only redisAppendCommand and will always return NULL. */
-void* redisvCommand(redisContext* c, const char* format, va_list ap);
-void* redisCommand(redisContext* c, const char* format, ...);
-void* redisCommandArgv(redisContext* c, int argc, const char** argv, const size_t* argvlen);
+void *redisvCommand(redisContext *c, const char *format, va_list ap);
+void *redisCommand(redisContext *c, const char *format, ...);
+void *redisCommandArgv(redisContext *c, int argc, const char **argv, const size_t *argvlen);
 
 #ifdef __cplusplus
 }
